--- a/config/new-carla-benchmark-job.yaml
+++ b/config/new-carla-benchmark-job.yaml
@@ -17,32 +17,31 @@ spec:
       #   role: gpu-worker
       initContainers:
         - name: leaderboard-copy
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20-development:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20:latest
           command: [ "sh", "-c", "cp -r /workspace/leaderboard/* /tmp/leaderboard-master/"]
           volumeMounts:
             - mountPath: /tmp/leaderboard-master
               name: leaderboard-master
         - name: scenario-copy
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20-development:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20:latest
           command: [ "sh", "-c", "cp -r /workspace/scenario_runner/* /tmp/scenario-runner-master/"]
           volumeMounts:
             - mountPath: /tmp/scenario-runner-master
               name: scenario-runner-master
         - name: carla-root-copy
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20-development:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20:latest
           command: [ "sh", "-c", "cp -r /workspace/CARLA/* /tmp/carla-root-master/"]
           volumeMounts:
             - mountPath: /tmp/carla-root-master
               name: carla-root-master
       containers:
         - name: simulator
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20-simulator-development:latest
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20-simulator:latest
           command: ["/bin/bash", "-c"]
           args:
             - |
               echo "Starting CARLA server"
-              ./CarlaUE4.sh -trace=counters,cpu,frame,bookmark,gpu -tracefile=ue4_trace.utrace &> server_data.txt
-              sleep 20000
+              ./CarlaUE4.sh --vulkan
               echo "Stopped CARLA server"
           env:
             - name: DISPLAY
@@ -62,17 +61,19 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-403:d0ef46b6-3062-4227-9eba-6959885464b3
+          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-586a194d-team-177:54a1db1b-d340-4de8-a25b-67aa756db0c6
           command: ["/bin/bash", "-c"]
           args:
             - |
-              echo "Sleeping a bit to ensure CARLA is ready"
-              sleep 60
-              echo "Starting agent"
-              bash /workspace/leaderboard/scripts/run_evaluation.sh
-              echo "Finished agent"
-              sleep 20000
+              echo "Sourcing '${HOME}/agent_sources.sh'""
+              source ${HOME}/.bashrc
+              if [[ -f "${HOME}/agent_sources.sh" ]]; then
+                source ${HOME}/agent_sources.sh
+              fi
+
+              bash /workspace/leaderboard/scripts/run_leaderboard.sh $CHALLENGE_TRACK_CODENAME $CHECKPOINT_ENDPOINT $RESUME
               exit 0
+
           volumeMounts:
             - mountPath: /workspace/leaderboard
               name: leaderboard-master
@@ -97,22 +98,12 @@ spec:
               value: "/workspace/CARLA"
             - name: SCENARIO_RUNNER_ROOT
               value: "/workspace/scenario_runner"
-            - name: ROUTES
-              value: "/workspace/leaderboard/data/routes_testing.xml"
-            - name: REPETITIONS
-              value: "1"
             - name: CHALLENGE_TRACK_CODENAME
-              value: "SENSORS"
+              value: "SENSORS"                                      #  To make it dynamic
             - name: CHECKPOINT_ENDPOINT
-              value: "/workspace/leaderboard/results.json"
-            - name: DEBUG_CHECKPOINT_ENDPOINT
-              value: "/workspace/leaderboard/live_results.txt"
-            - name: DEBUG_CHALLENGE
-              value: "2"
-            - name: RECORD_PATH
-              value: ""
+              value: "/workspace/leaderboard/results.json"          #  To make it dynamic
             - name: RESUME
-              value: ""
+              value: ""                                             #  To make it dynamic
           # resources:
           #   limits:
           #     nvidia.com/gpu: 1
