--- a/leaderboard_1.0/config/leaderboard-10-cluster.yaml
+++ b/leaderboard_1.0/config/leaderboard-10-cluster.yaml
@@ -17,7 +17,7 @@ iam:
   withOIDC: true
   serviceAccounts:
   - metadata:
-      name: fluent-bit
+      name: fluentd
       namespace: kube-system
     attachPolicy:
       Version: "2012-10-17"
